<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTrip">

    <EditText
        android:id="@+id/tripTxtView"
        android:layout_width="374dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tripKey"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/noTextKey"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent" />

    <EditText
        android:id="@+id/cityTextView"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/searchkey"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/tripTxtView"
        app:layout_constraintTop_toBottomOf="@+id/tripTxtView" />

    <Button
        android:id="@+id/searchCityBtn"
        android:layout_width="92dp"
        android:layout_height="49dp"
        android:layout_marginEnd="24dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cityTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cityRecyclerView"
        android:layout_width="372dp"
        android:layout_height="440dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <Button
        android:id="@+id/addtripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/addTrip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>